# patina

./: .gitignore  .mailmap  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  package-lock.json  package.json  tsconfig.quality.json  vite.config.ts
.github/: pull_request_template.md
docs/: architecture-migration-checklist.md  architecture-target.md  architecture.md  engineering-quality.md  issue-fix-boundary-guardrails.md  product-principles-and-scope.md  quiet-pro-component-guidelines.md  remote-status-bridge.md  roadmap-and-prioritization.md  versioning-and-release-policy.md
scripts/: audit-dependencies.ts  check-architecture-boundaries.ts  check-bundle-budget.ts  check-critical-mutations.ts  check-ipc-contracts.ts  check-naming-boundaries.ts  check-quality-hotspot-baseline.ts  check-quiet-pro-style-debt.ts  check-rust-boundaries.ts  chromium-extension.ts  firefox-extension.ts  release.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json  tauri.local.conf.json
src-tauri/nsis/: patina-migration-hooks.nsh
src-tauri/src/: lib.rs
src-tauri/src/app/: backup.rs  bootstrap.rs  classification.rs  desktop_behavior.rs  import.rs  local_api.rs  main_window.rs  mod.rs  runtime.rs  state.rs  tools.rs  tray.rs  widget.rs
src-tauri/src/commands/: activity_read_model.rs  backup.rs  classification.rs  diagnostics.rs  export.rs  import.rs  mod.rs  persistence.rs  screenshots.rs  settings.rs  storage.rs  tracking.rs  window.rs
src-tauri/src/data/: app_settings_service.rs  backup.rs  classification_service.rs  icon_cache_service.rs  migrations.rs  mod.rs  remote_backup.rs  schema.rs  settings_payload_service.rs  sqlite_pool.rs  sqlite_pool_upgrade_tests.rs  storage_migration.rs  storage_restart.rs  tracking_runtime.rs  user_data_maintenance.rs
src-tauri/src/data/activity_read_model/: catalog.rs  hourly.rs  mod.rs
src-tauri/src/data/backup/: archive.rs  archive_tests.rs  import_data.rs  paths.rs  payload.rs  prepared_source.rs  restore_payload.rs  snapshot.rs
src-tauri/src/data/import/: canonical_csv.rs  commit.rs  mod.rs  paths.rs  preview.rs
src-tauri/src/data/import/destructure/: mod.rs  sqlite_source.rs  tai_csv.rs
src-tauri/src/data/repositories/: app_settings.rs  classification_settings.rs  icon_cache.rs  import_batches.rs  sessions.rs  tools.rs  tracker_settings.rs  update_state.rs  web_activity.rs  widget_state.rs
src-tauri/src/data/repositories/tools/: backup_restore.rs  read.rs
src-tauri/src/data/sqlite_pool/: activity_read_model_schema.rs  import_schema.rs  maintenance.rs  restore.rs
src-tauri/src/domain/: activity_read_model.rs  backup.rs  mod.rs  settings.rs  storage.rs  tracking.rs  web_activity.rs
src-tauri/src/domain/tracking/: contracts.rs  process_filters.rs  session_identity.rs  status_resolution.rs  sustained_identity.rs
src-tauri/src/engine/: mod.rs  tracking_runtime.rs  updater.rs
src-tauri/src/engine/classification/: auto_classifier.rs  mod.rs
src-tauri/src/engine/export/: common.rs  csv_exporter.rs  mod.rs  parquet_exporter.rs  sqlite_exporter.rs
src-tauri/src/engine/remote_status_bridge/: mod.rs
src-tauri/src/engine/screenshots/: capture.rs  cleanup.rs  mod.rs  query.rs  settings.rs  types.rs
src-tauri/src/engine/tools/: mod.rs
src-tauri/src/engine/tracking/: continuity.rs  metadata.rs  mod.rs  pause_state.rs  runtime.rs  runtime_snapshot.rs  session_timeout.rs  startup.rs  title_state.rs  transition.rs  watchdog.rs
src-tauri/src/engine/tracking/runtime/: exclusion.rs  loop_state.rs  window_polling.rs
src-tauri/src/engine/web_activity/: mod.rs
src-tauri/src/platform/: app_paths.rs  mod.rs  storage_anchor.rs  storage_paths.rs  storage_usage.rs  web_activity_bridge.rs  webdav.rs  webview_cache.rs
src-tauri/src/platform/windows/: legacy_install.rs  mod.rs  notifications.rs  window_activation.rs
tests/: activityReadModelGateway.test.ts  backgroundReturnHomePolicy.test.ts  classificationAppCatalog.test.ts  (+31 more)
(+325 files in other folders)
